--- a/.github/workflows/action-docker-ecr.yml
+++ b/.github/workflows/action-docker-ecr.yml
@@ -11,6 +11,8 @@ env:
   AWS_REGION: ap-northeast-2
   ECR_REPOSITORY: test-test123 # 나의 AWS ECR repository name 
   
+permission:
+  id-token : write
 
 jobs:
   deploy:
