--- a/.github/workflows/action-docker-ecr.yml
+++ b/.github/workflows/action-docker-ecr.yml
@@ -45,3 +45,8 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+
+# build: ${{ steps.login-ecr.outputs.registry }}/test-test123:${{ github.sha }}
+# push
+# echo
+    
